.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_plainAssignment.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_plainAssignment.ts(22,14): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
/.src/missingEffectContext_plainAssignment.ts(25,14): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceC`. effect(missingEffectContext)
/.src/missingEffectContext_plainAssignment.ts(30,14): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceC`. effect(missingEffectContext)
/.src/missingEffectContext_plainAssignment.ts(34,9): error TS377004: This Effect requires a service that is missing from the expected Effect context: `A`. effect(missingEffectContext)
/.src/missingEffectContext_plainAssignment.ts(39,30): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)


==== /.src/missingEffectContext_plainAssignment.ts (5 errors) ====
    // @effect-v3
    import type * as Context from "effect/Context"
    import * as Effect from "effect/Effect"
    
    class ServiceA extends Effect.Service<ServiceA>()("ServiceA", {
      succeed: { a: 1 }
    }) {}
    
    class ServiceB extends Effect.Service<ServiceB>()("ServiceB", {
      succeed: { a: 2 }
    }) {}
    
    class ServiceC extends Effect.Service<ServiceC>()("ServiceC", {
      succeed: { a: 3 }
    }) {}
    
    declare const effectWithServices: Effect.Effect<number, never, ServiceA | ServiceB | ServiceC>
    
    export const noError: Effect.Effect<number> = Effect.succeed(1)
    
    // @ts-expect-error
    export const missingAllServices: Effect.Effect<number> = effectWithServices
                 ~~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
    
    // @ts-expect-error
    export const missingServiceC: Effect.Effect<number, never, ServiceA | ServiceB> = effectWithServices
                 ~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceC`. effect(missingEffectContext)
    
    export interface EffectSubtyping<A> extends Effect.Effect<A, never, ServiceA | ServiceB> {}
    
    // @ts-expect-error
    export const missingServiceCWithSubtyping: EffectSubtyping<number> = effectWithServices
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceC`. effect(missingEffectContext)
    
    export function missingServiceWithGenericType<A>(service: A) {
      // @ts-expect-error
      const missingServiceA: Effect.Effect<Context.Context<A>> = Effect.context<A>()
            ~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `A`. effect(missingEffectContext)
      return missingServiceA
    }
    
    // @ts-expect-error
    const _ = effectWithServices satisfies Effect.Effect<number, never, never>
                                 ~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
    
